# CodeBot

./: .gitignore  README.md  docker-compose.yml  presentation.md  pyproject.toml  pyrightconfig.json  requirements.txt
deploy/: Dockerfile  README.md  deploy.sh  docker-compose.yml  setup.sh  setup_ec2.sh  start.sh  update.sh
src/: app.py  arch.py  config.py  llm_config.json  main.py  s3_sync.py  utils.py  webhook_server.py
src/agents/: __init__.py  documentation_agent.py  module_selector_agent.py  module_summary_agent.py  planner_agent.py  qa_agent.py  symbol_selector_agent.py
src/artifacts/: projects.json
src/artifacts/Requests_Library/: module_summary.json  symbols_final.json
src/artifacts/Requests_Library/arch/: arch.dot
src/artifacts/Requests_Library/vector/: index.faiss  index.pkl  metadata.json
src/core/: __init__.py  embedding.py  parser.py  pipeline.py  retrieval.py
src/ui/: __init__.py  chat_interface.py  codebase_manager.py  diagram_viewer.py
src/visualization/: __init__.py  interactive_diagram.py
