[project]
name = "codebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "faiss-cpu",
    "sentence-transformers",
    "pytest",
    "openai",
    "python-dotenv",
    "pydot",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "langchain-huggingface>=1.2.0",
    "blinker>=1.9.0",
    "streamlit>=1.54.0",
    "fastapi",
    "uvicorn",
]
